<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_VLS_WINDOW" Id="{06bf4e71-7665-4602-9a1f-3fc3cd0692b8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_VLS_WINDOW
VAR
    xFirstPass		: BOOL;
    fbFSInit		: R_TRIG;

    state			: E_STATES;



    g_FastFaultOutputNA: FB_HardwareFFOutput;
    g_fbArbiterNA: FB_Arbiter(2);
END_VAR
VAR_INPUT
    bExtPress		: BOOL := FALSE; // Input for external interlock with hutch vacuum system

    bOverride		: BOOL;

    bSetup			: BOOL;


END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbFSInit( CLK := TRUE, Q => xFirstPass);
(* On first PLC pass, put valve into init state*)
IF xFirstPass THEN
    state:= E_STATES.INIT;
    bOverride := FALSE;
    bSetup := FALSE;
END_IF



//STATE ACTIONS
CASE state OF

 E_STATES.INIT:
        VLS_VGC_01.M_Set_OPN_SW(FALSE); //Isolation Valve closed
        VLS_VWC_01.M_Set_CLS_SW(FALSE); // Window valve OPEN
        VLS_VGC_01.i_xOverrideMode := VLS_VWC_01.i_xOverrideMode := FALSE;
        //Transition
        if (VLS_VGC_01.M_IsClosed() AND VLS_VWC_01.M_IsOpen()) THEN
            state:= E_STATES.NOT_SAFE;
        END_IF

E_STATES.NOT_SAFE: // System is not allowed to actuate, i.e all interlocks are in effect
    VLS_VGC_01.M_Set_OPN_SW(VLS_VGC_01.iq_stValve.q_xOPN_DO );
     //C_1.i_xExt_OK := VGC_1.i_xEPS_OPN_OK := VGC_1.i_xEPS_CLS_OK:= FALSE;
    VLS_VWC_01.i_xExtILK_OK:= FALSE;
    VLS_VGC_01.i_xOverrideMode := VLS_VWC_01.i_xOverrideMode := FALSE;

    //Transition
    //IF (US_GCC.IG.xAT_VAC AND DS_GCC.IG.xAT_VAC) THEN state:= E_STATES.READY; END_IF
    IF (bExtPress AND VLS_GPI_01.PG.xAT_VAC) THEN state:= E_STATES.READY; END_IF



 E_STATES.READY: // OK to MOVE
     // Release the external interlock so the differential pressure inlk is in effect
     VLS_VGC_01.i_xExt_OK:= VLS_VGC_01.i_xEPS_OK :=TRUE;
    //permission to insert window valve only when US vacuum is good??
    VLS_VWC_01.i_xExtILK_OK:= bExtPress;
    // Valves  alternate positions.
    If (VLS_VWC_01.M_IsClosed()) THEN  VLS_VGC_01.M_Set_OPN_SW(TRUE);
    ELSIF (VLS_VWC_01.M_IsOpen()) THEN VLS_VGC_01.M_Set_OPN_SW(FALSE);
    END_IF

// bOverride := TRUE;
 E_STATES.OVERRIDE:
    // Override Mode is enabled for all valves
     VLS_VGC_01.i_xOverrideMode :=VLS_VWC_01.i_xOverrideMode := TRUE;
    // Exit of Override mode always goes back to init
     IF NOT(bOverride) THEN state:= E_STATES.INIT; END_IF


 E_STATES.SETUP:
    // Window valve remains retracted
     VLS_VWC_01.i_xExtILK_OK := FALSE;
    // Isolation valves operates like standard gate valves
    VLS_VGC_01.i_xExt_OK := TRUE;
    // exit to init just to be safe?
    IF NOT(bSetup) THEN state:= E_STATES.INIT; END_IF
END_CASE


// STATE TRANSITIONS
// the system can go to setup state from any other state except override
IF (bSetup) AND (state<>E_STATES.OVERRIDE) THEN state:= E_STATES.SETUP;
// the system can go to override state from any other state except setup
ELSIF (bOverride) AND (state<>E_STATES.SETUP) THEN state:= E_STATES.OVERRIDE;
//Loss of at vac signal makes the system go to init/not safe to move state
ELSIF (NOT bExtPress) OR (NOT VLS_GPI_01.PG.xAT_VAC) THEN state:= E_STATES.INIT;
//ELSIF (NOT US_GCC.IG.xAT_VAC) OR (NOT DS_GCC.IG.xAT_VAC) THEN state:= E_STATES.INIT;
END_IF


// Instantiate function blocks
VLS_GPI_01(PG=>);
VLS_GCC_01(PG:=VLS_GPI_01.PG , IG=> , bEP := TRUE );

VLS_ROUGH_GPI.M_SetBits(32767);
VLS_ROUGH_GPI(PG=>);

VLS_VGC_01(
    i_stUSG:= TC_GCP_01.PG ,
    i_stDSG:= VLS_GPI_01.PG ,
    i_xDis_DPIlk:= FALSE ,
    i_xPMPS_OK:= TRUE ,
    i_xEPS_OK:= ,
    i_xExt_OK:= ,
    i_xOverrideMode:= ,
    i_xReset:= ,
    i_xIsAperture:= TRUE,
    i_sDevName:= ,
    i_nTransitionRootID:= ,
    iq_stValve=> ,
    xMPS_OK=> ,
    io_fbFFHWO:=g_FastFaultOutputNA ,
    fbArbiter:= g_fbArbiterNA
);


VLS_VWC_01(
    i_xExtILK_OK:= ,
    i_xOverrideMode:= ,
    iq_stValve=> ,
    io_fbFFHWO:= g_FastFaultOutputNA ,
    fbArbiter:= g_fbArbiterNA,
    i_xPMPS_OK:= TRUE,
    i_xIsAperture:= TRUE ,
    i_sDevName:= ,
    i_nTransitionRootID:= );


//VGC_W(i_xExtILK_OK:= ,
//	i_xOverrideMode:= ,
 //   iq_stValve=> );


]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>